--- a/Css/index.css
+++ b/Css/index.css
@@ -97,3 +97,34 @@ align-items: center;
     margin-left: 30px;
     margin-right: 30px;
 }
+
+#streaming{
+    border: 1px solid black;
+    height: 400px;
+    width: 70%;
+    margin: auto;
+    margin-top: 15px;
+}
+
+#streaming td img{
+    height: 100%;
+    width: 100%;
+}
+
+
+#crud{
+    margin: auto;
+    border: 1px solid black;
+    height: 40px;
+    width: 85%;
+    text-align: center;
+}
+
+#crud button{
+    padding: 5px;
+    margin-top: 4px;
+}
+
+table{
+    margin: auto;
+}
