--- a/Css/index.css
+++ b/Css/index.css
@@ -79,13 +79,10 @@
     color: white;
 }
 
-#menu{
-border: 1px solid black;
-height: 50px;
-width: 100%;
-padding: 5px;
-text-align: center;
-align-items: center;
+.menuppal{
+display: flex;
+justify-content: center;
+padding-bottom: 5px;   
 }
 
 #menu button{
