--- a/Css/index.css
+++ b/Css/index.css
@@ -85,14 +85,31 @@ justify-content: center;
 padding-bottom: 5px;   
 }
 
-#menu button{
-    padding: 5px;
-    width: 10%;
+ul {
+    margin:0;
+    padding:0;
+    text-align: center;
+    list-style:none;            
+}
+ul  li {
+    padding: 2px 5px;              
 }
 
-#carro{
-    margin-left: 30px;
-    margin-right: 30px;
+.crudlist li{
+    display: inline-flex;
+    justify-content: center; 
+    text-decoration: none;
+    padding-top: 10px;
+    padding-bottom: 25px;
+}
+.crudlist :hover{
+    background-color: rgb(0, 157, 255);
+    transition: all 300ms ease;
+}
+.crudlist a {
+   text-decoration: none;
+   cursor: pointer;
+   color: black;
 }
 
 #streaming{
